NIFI-14082 Changed use of Stream.of to List.of, renamed where possible all list of PropertyDescriptor to PROPERTIES and the set of RelationShip to RELATIONSHIPS and ensured all properties and realtionships are on individual lines for increased readability.